fix(json-date): 修正 LocalDate 格式化導致 HourOfDay 錯誤，統一日期輸出格式
- 修正 PaymentDto 與 PurchaseDto 中日期欄位格式：
  - LocalDate 欄位（purchaseDate、payDate）改用 @JsonFormat(pattern = "yyyy-MM-dd")
  - LocalDateTime 欄位（createdAt）改用 @JsonFormat(pattern = "yyyy-MM-dd'T'HH:mm:ss")
- 移除 application.yml 全域 date-format，避免 LocalDate 被誤套用時間格式
- 新增 JacksonConfig 確保全域註冊 JavaTimeModule 並停用 timestamp 輸出
- 解決「Unsupported field: HourOfDay」序列化錯誤問題
- 優化 Swagger 顯示格式與日期欄位一致性